--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,22 @@
     </dependency>
 
     <dependency>
-<groupId>net.sf.meka.thirdparty</groupId>
-<artifactId>mulan</artifactId>
-<version>1.5.0</version>
-</dependency>
+    <groupId>net.sf.meka</groupId>
+    <artifactId>meka</artifactId>
+    <version>1.7.5</version>
+    <exclusions>
+      <exclusion>
+        <groupId>net.sf.meka.thirdparty</groupId>
+        <artifactId>mulan</artifactId>
+      </exclusion>
+    </exclusions>
+  </dependency>
+
+  <dependency>
+    <groupId>net.sf.meka.thirdparty</groupId>
+    <artifactId>mulan</artifactId>
+    <version>1.5.0</version>
+  </dependency>
 
 
     
@@ -311,7 +323,7 @@
         <version>2.8.1</version>
         <configuration>
           <maxmemory>256m</maxmemory>
-          <subpackages>weka:org</subpackages>
+          <!--<subpackages>weka:org</subpackages>-->
           <show>public</show>
           <outputDirectory>${project.basedir}/doc</outputDirectory>
           <!-- when using Java 8, use this setting to avoid overly strict javadoclet -->
