--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,15 @@
     <dependency>
     <groupId>net.sf.meka</groupId>
     <artifactId>meka</artifactId>
-    <version>1.7.5</version>
+    <version>1.7.7</version>
     <exclusions>
       <exclusion>
         <groupId>net.sf.meka.thirdparty</groupId>
         <artifactId>mulan</artifactId>
+      </exclusion>
+      <exclusion>
+      	<groupId>nz.ac.waikato.cms.moa</groupId>
+      	<artifactId>moa</artifactId>
       </exclusion>
     </exclusions>
   </dependency>
