--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ dist: trusty
 language: java
 jdk: oraclejdk8
 sudo: enabled 
-install: mvn clean install -Dgpg.skip
-after_script:
-    - bash <(curl -s https://codecov.io/bash)
+branches:
+  ony:
+    - master
+install: mvn install -DskipTests -Dgpg.skip
+after_success:
+  - mvn clean test jacoco:report coveralls:report
 notifications: 
  email:
   recipients: 
    - pawel.trajdos@pwr.edu.pl
   on_success: always
   on_failure: always
-        
-     
